css/frm_admin.css
/* ... */
.frm_sortable_field_opts{
	margin-top:5px;
}
.frm_single_option .frm_delete_icon{
	float:left;
	margin-right:3px;
}

.frm_single_option:hover .frm_single_visible_hover{
	opacity:100;
	*visibility:visible;
}

li.ui-state-default.selected .frm-show-click,
li.ui-state-default.selected.edit_field_type_divider .frm-show-click{
	display:inline;
	vertical-align:top;
}
.frm_field_box:not(.edit_field_type_divider):hover > .frm-show-hover,
.frm_field_box .divider_section_only:hover > .frm-show-hover,
li.ui-state-default.selected > .frm-show-hover,
li.ui-state-default.selected.edit_field_type_divider .divider_section_only .frm-show-hover{
	opacity:100;
	*visibility:visible;
}

li.ui-state-default.selected .frm-show-click.frm_import_options {
	vertical-align:middle;
    padding: 10px 5px 12px;
    background: #fbfbfb;
    border: solid 1px #ebebeb;
}

li.ui-state-default.selected .frm-show-click.frm_import_options select {
	max-width: 22%;
}

.frm_sorting span.ui-icon{width:16px;}

#form_settings_page label,
.frm_form_builder label{
	font-weight:normal;
}

#form_settings_page .tabs-panel, .frm_settings_form .tabs-panel{max-height:none !important; min-height:260px !important;}
#form_settings_page #post-body-content{min-width:500px;}
#form_settings_page .frm_posttax_row select{max-width:35%;}
select.frm_cancelnew, input.frm_enternew{width:175px;}


/* Global Settings */
.categorydiv .frm_settings_form div.tabs-panel.general_settings{border-top:none;}
.categorydiv .frm_settings_form div.tabs-panel.general_settings .submit{padding:0;}
.categorydiv .frm_settings_form .frm_uninstall{padding-top:1.25em;}
#contextual-help-columns div.tabs-panel.general_settings.frm_license_box{min-height:0;border-bottom:none;}
.general_settings #frm_license_top{float:left;width:55%}
.categorydiv div.tabs-panel.general_settings{max-height:none;}
.categorydiv div.tabs-panel.general_settings .postbox{margin-bottom:0;}
.tabs-panel{height:auto !important; min-height:260px;}
.tabs-panel.panel_secondary{min-height:20px;margin-top:10px;margin-left:150px;}
.edd_frm_license_row{
	line-height:2em;
	clear:both;
}
.frm_license_msg{
	margin-top:0;
}
.edd_frm_status_icon.frm_icon_font{
	color:#D54E21;
	margin:0 5px;
}
.edd_frm_status_icon.frm_icon_font.frm_inactive_icon{
	color:green;
}

/* Styles tabs */
#general-style #frm_gen_font_box{padding-right:0;width:100%;}
#date-fields-style #frm_show_cal{width:90px;height:80px;margin-right:6px;}
#frm_styling_form #frm_delete_style{padding-right:10px;}
.frm_pro_form .frm_lite_style{display:none;}

label.default-style-box input[type="checkbox"]{
	vertical-align:middle;
}

#frm_styling_form .frm_form_field input[type="checkbox"],
#frm_styling_form .frm_form_field input[type="radio"] {
    vertical-align: bottom;
}

#frm_styling_form .howto span{
	float:none;
	margin-top:0;
}

/* Import/Export */
.csv_opts #frm_csv_col_sep{width:45px;}

#frm_advanced td.frm_left_label{width:20%;padding-right:2px;}

#frm_where_options select{max-width:200px;}
#frm_where_options select.frm_insert_where_options{width:30%;}
#frm_where_options select.frm_where_is_options{width:20%;}
#frm_where_options span.frm_where_val{width:32%;display:inline-block;position:relative;}
#frm_where_options span.frm_where_val .frm_tooltip_icon{left:-4px;position: absolute;}
#frm_where_options span.frm_where_val.frm_hidden{display:none;}
#frm_where_options span.frm_where_val input, #frm_where_options span.frm_where_val select{width:90%;margin-left:10px;}
#frm_where_options{min-height:31px;}

.tabs-panel.active .tabs-panel, .frm_settings_form .tabs-panel .tabs-panel{border:none;padding:0;} /*for add-on reverse compatibility */

.frm-fade-in {
    opacity:0;  /* make things invisible upon start */
    -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
    -moz-animation:fadeIn ease-in 1;
    animation:fadeIn ease-in 1;

    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
    -moz-animation-fill-mode:forwards;
    animation-fill-mode:forwards;

    -webkit-animation-duration:0.5s;
    -moz-animation-duration:0.5s;
    animation-duration:0.5s;
}

.frm-fade-in.frm_delay_one{
	-webkit-animation-delay: 0.5s;
	-moz-animation-delay: 0.5s;
	animation-delay: 0.5s;
}

.frm_98_width{width:98% !important;}

/*Form Settings Tab*/
.frm_form_settings .advanced_settings .form-table{margin-top:0;}
.frm_form_settings .advanced_settings .form-table .frm_short_tr td{padding:0 10px 10px;}
.frm_form_settings .advanced_settings .form-table td.td_select_padding{padding:8px 10px 0;}
.frm_form_settings td.frm_175_width{width:175px;}
.frm_form_settings #success_url{width:95%;}

/* Customization Panel */
#frm-insert-fields-box, #frm-conditionals{
    max-height:none;
    padding-right:0;
}
#frm-conditionals, #frm-adv-info-tab{
	display:none;
}
#frm-insert-fields-box ul.subsubsub,
#frm-conditionals ul.subsubsub{
    float:right;
    margin:0;
}
#frm-insert-fields-box ul.alignleft,
#frm-conditionals ul.alignleft{
    margin:5px 0 0;
}
#frm-insert-fields-box ul.frm_code_list.frm_full_width,
#frm-conditionals ul.frm_code_list.frm_full_width{
    clear:both;
    max-height:150px;
    overflow:auto;
}
#frm-adv-info-tab{
    max-height:355px;
}
#frm-insert-fields-box ul.frm_code_list li.clear.frm_block{
    height:10px;
}

/* Customize HTML Tab */
#frm_html_tab.frm_hidden{
    display:none;
}
#frm_html_tab.active{
    display:inline;
}

/*Form Actions Tab*/
.frm_email_reply_container select,
.frm_email_reply_container input,
.form-table td.frm_150_width{
    width:170px;
}

#frm_notification_settings .frm_no_top_padding{
    padding-top:0;
}

.frm_email_settings.frm_email_settings.widgets-holder-wrap{
    overflow:auto;
	box-shadow:none;
}
/* ... */

